--- a/SimTECH/SimTECH/Pages/Season/Development/Developer.razor
+++ b/SimTECH/SimTECH/Pages/Season/Development/Developer.razor
@@ -1,21 +1,26 @@
-﻿@inject LeagueService _leagueService
-@inject SeasonEntrantService _entrantService
-@inject SeasonService SeasonService
-@inject IDialogService _dialogService
-@inject ISnackbar _snack
-
-<MudContainer MaxWidth="MaxWidth.ExtraLarge" Class="px-0">
+﻿<MudContainer MaxWidth="MaxWidth.ExtraLarge" Class="px-0">
     <MudStack Row="true" Class="mud-width-full">
         <MudPaper Width="20%" Class="pa-2">
             <DevelopSettings />
 
-            <MudButton Variant="Variant.Outlined" Color="Color.Secondary" OnClick="ShowSummary" Class="mt-4">Summary</MudButton>
+            <MudButton Variant="Variant.Outlined" Color="Color.Secondary" OnClick="ShowDevSummary" Class="mt-4">Summary</MudButton>
         </MudPaper>
         <MudPaper Class="flex-grow-1">
 
         </MudPaper>
         <MudPaper Width="20%" Class="pa-2">
+            <MudText Typo="Typo.h5">Set DEV ranges</MudText>
+            <MudDivider />
 
+            @if (ActiveRanges?.Any() == true)
+            {
+                <DefinedSetRanges SelectedAspect="@selectedAspect" SetRanges="@ActiveRanges" />
+            }
+
+            @if (selectedEntrant == Entrant.Driver && selectedAspect == Aspect.Skill && AgeRanges?.Any() == true)
+            {
+                <DefinedSetRanges SelectedAspect="@(Aspect.Age)" SetRanges="@AgeRanges" />
+            }
         </MudPaper>
     </MudStack>
 </MudContainer>
@@ -26,125 +31,15 @@
     [Parameter] public IEnumerable<SeasonEngine> SeasonEngines { get; set; } = Enumerable.Empty<SeasonEngine>();
     [Parameter] public IEnumerable<SeasonTeam> SeasonTeams { get; set; } = Enumerable.Empty<SeasonTeam>();
     [Parameter] public IEnumerable<SeasonDriver> SeasonDrivers { get; set; } = Enumerable.Empty<SeasonDriver>();
-    
+    [Parameter] public IEnumerable<DevelopmentRange> LeagueDevelopmentRanges { get; set; } = Enumerable.Empty<DevelopmentRange>();
+    [Parameter] public EventCallback OnShowSummary { get; set; }
+
     private List<DevelopedEntrant> DevelopedEntrants;
+    private List<DevelopmentRange>? ActiveRanges;
+    private List<DevelopmentRange>? AgeRanges;
 
-    private static readonly DialogOptions SummaryDialogOptions = new()
-        {
-            MaxWidth = MaxWidth.ExtraLarge,
-            CloseButton = true,
-        };
-    
-    private async Task ShowSummary()
-    {
-        var seasonLog = await _entrantService.GetDevelopmentLog(Season.Id);
+    private Entrant selectedEntrant = Entrant.Driver;
+    private Aspect selectedAspect = Aspect.Skill;
 
-        var summaries = new List<DevelopSummary>();
-        foreach (var groupSummary in seasonLog.GroupBy(e => e.EntrantGroup))
-        {
-            var entrantLog = new List<EntrantDevelopLog>();
-
-            foreach (var developed in groupSummary.ToArray().GroupBy(e => e.EntrantId))
-            {
-                EntrantDevelopLog? currentLogs;
-                var developedLogs = developed.ToArray();
-
-                switch (groupSummary.Key)
-                {
-                    case Entrant.Driver:
-                        currentLogs = CreateDriverLog(developed.Key, developedLogs); break;
-                    case Entrant.Team:
-                        currentLogs = CreateTeamLog(developed.Key, developedLogs); break;
-                    case Entrant.Engine:
-                        currentLogs = CreateEngineLog(developed.Key, developedLogs); break;
-                    default:
-                        currentLogs = null; break;
-                }
-
-                if (currentLogs != null)
-                    entrantLog.Add(currentLogs);
-            }
-
-            var minMaxPerAspect = new Dictionary<Aspect, (int, int)>();
-            foreach (var allChanged in entrantLog.SelectMany(e => e.DevelopedAspects).GroupBy(e => e.Key))
-            {
-                var lowest = allChanged.Select(e => e.Value.Item1).Min();
-                var highest = allChanged.Select(e => e.Value.Item1).Max();
-                minMaxPerAspect.Add(allChanged.Key, (lowest, highest));
-            }
-
-            summaries.Add(new DevelopSummary
-                {
-                    EntrantGroup = groupSummary.Key,
-                    Aspects = entrantLog[0].DevelopedAspects.Keys.ToArray(),
-                    EntrantLogs = entrantLog,
-                    MinMaxValues = minMaxPerAspect,
-                });
-        }
-
-        await _dialogService.ShowAsync<SummaryDevelopment>(
-            "Summary development", new DialogParameters { ["Summaries"] = summaries }, SummaryDialogOptions);
-    }
-
-    private EntrantDevelopLog? CreateDriverLog(long driverId, DevelopmentLog[] logs)
-    {
-        var matchingDriver = SeasonDrivers?.FirstOrDefault(e => e.Id == driverId);
-
-        if (matchingDriver == null)
-            return null;
-
-        var developedAspects = logs
-            .GroupBy(e => e.DevelopedAspect)
-            .ToDictionary(e => e.Key, e => (e.Select(x => x.Change).Sum(), matchingDriver.RetrieveAspectValue(e.Key)));
-
-        return new EntrantDevelopLog
-            {
-                EntrantId = driverId,
-                Entrant = Entrant.Driver,
-                Name = matchingDriver.Driver.FullName,
-                Nationality = matchingDriver.Driver.Country,
-                DevelopedAspects = developedAspects,
-            };
-    }
-
-    private EntrantDevelopLog? CreateTeamLog(long teamId, DevelopmentLog[] logs)
-    {
-        var matchingTeam = SeasonTeams?.FirstOrDefault(e => e.Id == teamId);
-
-        if (matchingTeam == null)
-            return null;
-
-        var developedAspects = logs
-            .GroupBy(e => e.DevelopedAspect)
-            .ToDictionary(e => e.Key, e => (e.Select(x => x.Change).Sum(), matchingTeam.RetrieveAspectValue(e.Key)));
-
-        return new EntrantDevelopLog
-            {
-                EntrantId = teamId,
-                Entrant = Entrant.Team,
-                Name = matchingTeam.Name,
-                Nationality = matchingTeam.Team.Country,
-                DevelopedAspects = developedAspects,
-            };
-    }
-
-    private EntrantDevelopLog? CreateEngineLog(long engineId, DevelopmentLog[] logs)
-    {
-        var matchingEngine = SeasonEngines?.FirstOrDefault(e => e.Id == engineId);
-
-        if (matchingEngine == null)
-            return null;
-
-        var developedAspects = logs
-            .GroupBy(e => e.DevelopedAspect)
-            .ToDictionary(e => e.Key, e => (e.Select(x => x.Change).Sum(), matchingEngine.RetrieveAspectValue(e.Key)));
-
-        return new EntrantDevelopLog
-            {
-                EntrantId = engineId,
-                Entrant = Entrant.Engine,
-                Name = matchingEngine.Name,
-                DevelopedAspects = developedAspects,
-            };
-    }
+    private async Task ShowDevSummary() => await OnShowSummary.InvokeAsync();
 }
