--- a/SimTECH/SimTECH/Pages/Season/EntrantWizard/Wizard.razor
+++ b/SimTECH/SimTECH/Pages/Season/EntrantWizard/Wizard.razor
@@ -130,10 +130,10 @@
     public AddEntrantsModel Model { get; set; } = new();
     public Season Season { get; set; }
     public Season? PreviousSeason { get; set; }
-    protected List<Engine> Engines { get; set; } = new();
-    protected List<Team> Teams { get; set; } = new();
-    protected List<Driver> Drivers { get; set; } = new();
-    protected List<Contract> Contracts { get; set; } = new();
+    public List<Engine> Engines { get; set; } = new();
+    public List<Team> Teams { get; set; } = new();
+    public List<Driver> Drivers { get; set; } = new();
+    public List<Contract> Contracts { get; set; } = new();
     public IEnumerable<Manufacturer> Manufacturers { get; set; } = Enumerable.Empty<Manufacturer>();
 
     private bool allowPersonalNumbers;
