--- a/SimTECH/SimTECH/Pages/Season/SeasonEditor.razor
+++ b/SimTECH/SimTECH/Pages/Season/SeasonEditor.razor
@@ -122,7 +122,7 @@
 @code {
     [CascadingParameter] protected MudDialogInstance? SeasonDialog { get; set; }
     [Parameter] public EditSeasonModel Model { get; set; }
-    [Parameter] public List<League> Leagues { get; set; }
+    [Parameter] public IEnumerable<League> Leagues { get; set; } = Enumerable.Empty<League>();
 
     private EditPointAllotmentModel allotmentBackup;
 
