--- a/SimTECH/SimTECH/Pages/Season/Development/DevelopSettings.razor
+++ b/SimTECH/SimTECH/Pages/Season/Development/DevelopSettings.razor
@@ -1,6 +1,4 @@
-﻿<MudText Typo="Typo.h5">Settings</MudText>
-<MudDivider />
-<MudStack Class="mud-height-full">
+﻿<MudStack Class="mud-height-full">
     <MudStack Spacing="0">
         <MudTooltip Text="For whom the development is run">
             <MudText Typo="Typo.subtitle1">Entrant</MudText>
@@ -12,13 +10,15 @@
         </MudChipSet>
     </MudStack>
 
-    <MudDivider />
+    <div>
+        <MudDivider />
+    </div>
 
     <MudStack Spacing="0">
         <MudTooltip Text="Which aspect is going to be developed">
             <MudText Typo="Typo.subtitle1">Target</MudText>
         </MudTooltip>
-        <MudChipSet SelectedChipChanged="TargetChipChanged" Mandatory="true">
+        <MudChipSet @ref="chipSet" SelectedChipChanged="TargetChipChanged" Mandatory="true">
             <MudChip Color="Color.Secondary" Value="Aspect.Reliability" Default="true">Reliability</MudChip>
 
             @if (_activeEntrant == Entrant.Driver)
@@ -41,7 +41,9 @@
         </MudChipSet>
     </MudStack>
 
-    <MudDivider />
+    <div>
+        <MudDivider />
+    </div>
 
     <MudStack Spacing="0">
         <MudTooltip Text="How the development ranges are determined">
@@ -56,7 +58,9 @@
 
     @if (_selectedType == Quantifier.Range)
     {
-        <MudDivider />
+        <div>
+            <MudDivider />
+        </div>
 
         <MudStack Spacing="0">
             <MudText Typo="Typo.subtitle1">Development range</MudText>
@@ -67,41 +71,43 @@
 </MudStack>
 
 @code {
-    Entrant _activeEntrant = Entrant.Driver;
-    Quantifier _selectedType = Quantifier.Range;
+    private Entrant _activeEntrant = Entrant.Driver;
+    private Quantifier _selectedType = Quantifier.Range;
+    private Aspect _selectedTarget = Aspect.Reliability;
 
-    async Task EntrantChipChanged(MudChip? entrantChip)
+    private MudChipSet chipSet;
+
+    private async Task EntrantChipChanged(MudChip? entrantChip)
     {
         if (entrantChip == null)
             return;
 
-        //_selectedTarget = Aspect.Reliability;
-        //_activeEntrant = (Entrant)entrantChip.Value;
+        _activeEntrant = (Entrant)entrantChip.Value;
 
         //await ReloadDeveloped(_activeEntrant);
         //ApplyCommon();
     }
 
-    void TypeChipChanged(MudChip? typeChip)
+    private void TypeChipChanged(MudChip? typeChip)
     {
         if (typeChip == null)
             return;
 
-        //_selectedType = (Quantifier)typeChip.Value;
+        _selectedType = (Quantifier)typeChip.Value;
         //ApplyCommon();
     }
 
-    async Task TargetChipChanged(MudChip? devChip)
+    private async Task TargetChipChanged(MudChip? devChip)
     {
         if (devChip == null)
             return;
 
-        //_selectedTarget = (Aspect)devChip.Value;
+        _selectedTarget = (Aspect)devChip.Value;
         //await ReloadDeveloped(_activeEntrant);
         //ApplyCommon();
     }
 
-    void ApplyMinRange(int newMin)
+    private void ApplyMinRange(int newMin)
     {
         //currentMin = newMin;
 
@@ -109,7 +115,7 @@
         //    entrant.Min = newMin;
     }
 
-    void ApplyMaxRange(int newMax)
+    private void ApplyMaxRange(int newMax)
     {
         //currentMax = newMax;
 
